# sigil-lang

./: .gitignore  BENCHMARK_REPORT.md  COPYRIGHT  LICENSE  LICENSE-APACHE  LICENSE-MIT  MIGRATION_ROADMAP.md  NOTICE  README.md  RELEASE_INSTRUCTIONS.md  SIGIL_PARSER_REQUIREMENTS (1).md  SIGIL_PARSER_REQUIREMENTS.md  UX_ANALYSIS_BRUTAL.md  UX_REVIEW.md
.claude/: CLAUDE.md
.github/workflows/: ci.yml  publish-kmp.yml  release.yml
aegis/: README.md
aegis/docs/: architecture.md  philosophy.md
aegis/examples/: secure_agent.sg
aegis/src/: aegis.sg  lib.sg  types.sg
anima/: README.md
anima/docs/: architecture.md  philosophy.md
anima/examples/: soulful_agent.sg
anima/src/: lib.sg
commune/: README.md
commune/docs/: architecture.md  philosophy.md
commune/src/: commune.sg  lib.sg  types.sg
covenant/: README.md
covenant/docs/: architecture.md  philosophy.md
covenant/examples/: collaborative_agent.sg
covenant/src/: lib.sg
daemon/: README.md
daemon/docs/: architecture.md  philosophy.md
daemon/src/: daemon.sg  lib.sg  types.sg
docs/: AETHER_FEATURE_PARITY_PLAN.md  AI_IR_SPEC.md  AI_TUTORIAL.md  DOCUMENTATION_SITE_ROADMAP.md  GETTING_STARTED.md  JVM_BACKEND_SPEC.md  PLAYGROUND_BACKEND_SPEC.md  PLAYGROUND_DESIGN.md  SCIENTIFIC_AB_COMPARISONS.md  SYMBOLS.md  agent-infrastructure.md
docs/proposals/: SIGIL-001-ERGONOMIC-REFINEMENTS.md
docs/specs/: 00-OVERVIEW.md  01-LEXICAL.md  02-SYNTAX.md  03-TYPES.md  04-MEMORY.md  05-MATHEMATICS.md  06-CONCURRENCY.md  07-METAPROGRAMMING.md  08-FFI.md  09-STDLIB.md  10-TOOLING.md  11-HOLOGRAPHIC.md  12-QUANTUM.md  13-QUANTUM-HOLOGRAPHIC.md  14-NEURAL.md  15-PROTOCOLS.md  16-AI-IR.md
editor/vscode/: language-configuration.json  package.json  sigil.tmLanguage.json
editor/vscode/snippets/: sigil.json
editor/vscode/src/: extension.ts
engram/: README.md
engram/docs/: anamnesis.md  api-reference.md  architecture.md  distribution.md  memory-types.md  philosophy.md
engram/examples/: basic_usage.sg
engram/src/: config.sg  engram.sg  episodic.sg  instant.sg  lib.sg  procedural.sg  query.sg  semantic.sg  types.sg
engram/src/embed/: mod.sg
engram/src/index/: graph.sg  hnsw.sg  mod.sg  temporal.sg
engram/src/storage/: mod.sg
engram/tests/: integration_tests.sg
examples/: README.md  actor_system.sigil  actors.sigil  affective_markers.sigil  agent_complete.sg  bench_ack.sigil  bench_all.sigil  bench_comprehensive.sigil  bench_comprehensive_jit.sigil  bench_extended.sigil  bench_inline_test.sigil  bench_jit.sigil  bench_loop_opts.sigil  bench_pipes.sigil  bench_simd_arrays.sigil  bench_simple.sigil  bench_simple_jit.sigil  benchmark.sigil  claude_epistemic.sigil  claude_evidence_test.sigil  claude_evidence_valid.sigil  claude_first.sigil  claude_meditation.sigil  concurrency.sigil  data_pipeline.sigil  evidence_chain_demo.sigil  evidence_inference.sigil  evidentiality.sigil  fib_bench.sigil  fib_test.sigil  filter.sigil  hello.sigil  ir_demo.ir.json  ir_demo.sigil  mathematics.sigil  persona_sigil.sigil  pipe_chains.sigil  pipes.sigil  pipes2.sigil  polycultural_text.sigil  (+7 more)
gnosis/: README.md
gnosis/docs/: architecture.md  philosophy.md
gnosis/examples/: learning_agent.sg
gnosis/src/: lib.sg
homebrew/: README.md
homebrew/Formula/: sigil.rb
omen/: README.md
omen/docs/: architecture.md  philosophy.md
omen/src/: lib.sg
oracle/: README.md
oracle/docs/: architecture.md  philosophy.md
oracle/examples/: explainable_decision.sg
oracle/src/: lib.sg
parser/: Cargo.toml  README.md
parser/runtime/: Makefile  sigil_runtime.c
parser/src/: ast.rs  codegen.rs  diagnostic.rs  interpreter.rs  ir.rs  lexer.rs  lib.rs  llvm_codegen.rs  lower.rs  main.rs  optimize.rs  parser.rs  span.rs  stdlib.rs  typeck.rs
parser/src/ffi/: ctypes.rs  helpers.rs  mod.rs
parser/src/protocol/: amqp.rs  common.rs  graphql.rs  grpc.rs  http.rs  kafka.rs  mod.rs  websocket.rs
parser/tests/: actor_test.sigil  benchmark_all_features.sigil  benchmark_jit.sigil  benchmark_phase9.sigil  debug_vec3.sigil  evidentiality_type_level.sigil
playground/: README.md  index.html  package-lock.json  package.json  vite.config.js
playground/server/: index.js  package-lock.json  package.json
playground/src/: main.js
rust_comparison/: Cargo.toml  jit_bench.rs
rust_comparison/src/: main.rs
schemas/: ir-v1.schema.json
shared/: README.md
shared/src/: integration.sg  lib.sg
sigil-kmp/: README.md  build.gradle.kts  gradle.properties  jitpack.yml  settings.gradle.kts
sigil-kmp/src/commonMain/kotlin/com/daemoniorum/sigil/: Sigil.kt
sigil-kmp/src/commonMain/kotlin/com/daemoniorum/sigil/ast/: Ast.kt
sigil-kmp/src/commonMain/kotlin/com/daemoniorum/sigil/interpreter/: Interpreter.kt
sigil-kmp/src/commonMain/kotlin/com/daemoniorum/sigil/lexer/: Lexer.kt  Token.kt
sigil-kmp/src/commonMain/kotlin/com/daemoniorum/sigil/parser/: Parser.kt
sigil-kmp/src/commonMain/kotlin/com/daemoniorum/sigil/runtime/: Evidence.kt  Morphemes.kt  SigilValue.kt
sigil-kmp/src/commonMain/kotlin/com/daemoniorum/sigil/typeck/: TypeChecker.kt
tools/glyph/: Cargo.toml
tools/glyph/src/: main.rs
tools/mcp-server/: README.md  package-lock.json  package.json  test.js
tools/mcp-server/src/: index.ts
tools/oracle/: Cargo.toml  README.md
tools/oracle/src/: main.rs
