[package]
name = "sigil-parser"
version = "0.1.0"
edition = "2021"
description = "Parser and native compiler for the Sigil programming language"
authors = ["Daemoniorum, Inc."]
license = "MIT"

[features]
default = ["jit"]
jit = ["cranelift-codegen", "cranelift-frontend", "cranelift-jit", "cranelift-module", "cranelift-native"]
llvm = ["inkwell"]

[dependencies]
thiserror = "1.0"
unicode-xid = "0.2"
logos = "0.14"
rustyline = { version = "14.0", features = ["derive"] }

# Rich error reporting
ariadne = "0.4"
strsim = "0.11"  # For "did you mean?" suggestions

# JSON output for AI agents
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto and encoding
sha2 = "0.10"
md-5 = "0.10"
base64 = "0.22"

# Regex support
regex = "1.10"

# UUID generation
uuid = { version = "1.10", features = ["v4", "fast-rng"] }

# Cranelift JIT compiler backend
cranelift-codegen = { version = "0.113", optional = true }
cranelift-frontend = { version = "0.113", optional = true }
cranelift-jit = { version = "0.113", optional = true }
cranelift-module = { version = "0.113", optional = true }
cranelift-native = { version = "0.113", optional = true }

# For runtime support
libc = "0.2"

# LLVM backend for native performance
inkwell = { version = "0.6", features = ["llvm18-1"], optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
proptest = "1.4"

[[bin]]
name = "sigil"
path = "src/main.rs"

[lib]
name = "sigil_parser"
path = "src/lib.rs"
