[package]
name = "sigil-parser"
version = "0.1.0"
edition = "2021"
description = "Parser and native compiler for the Sigil programming language"
authors = ["Lilith Crook <lilith@daemoniorum.com>"]
license = "SEE LICENSE IN LICENSE"
repository = "https://github.com/Daemoniorum-LLC/sigil-lang"
homepage = "https://www.daemoniorum.com"
documentation = "https://github.com/Daemoniorum-LLC/sigil-lang/tree/main/docs"
readme = "../README.md"
keywords = ["parser", "compiler", "programming-language", "jit", "ai"]
categories = ["compilers", "development-tools"]

[features]
default = ["jit"]
jit = ["cranelift-codegen", "cranelift-frontend", "cranelift-jit", "cranelift-module", "cranelift-native"]
llvm = ["inkwell"]

[dependencies]
thiserror = "1.0"
unicode-xid = "0.2"
logos = "0.14"
rustyline = { version = "14.0", features = ["derive"] }

# Rich error reporting
ariadne = "0.4"
strsim = "0.11"  # For "did you mean?" suggestions

# JSON output for AI agents
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto and encoding
sha2 = "0.10"
md-5 = "0.10"
base64 = "0.22"

# Regex support
regex = "1.10"

# Unicode text processing - polycultural support
unicode-normalization = "0.1"
unicode-segmentation = "1.10"
unicode-script = "0.5"           # Script detection (Latin, Arabic, CJK, etc.)
unicode-bidi = "0.3"             # Bidirectional text (RTL/LTR)
unicode-width = "0.1"            # Display width for CJK
# unicode_categories - not needed, using unicode-script instead
deunicode = "1.4"                # Transliteration to ASCII
icu_collator = "1.5"             # Locale-aware collation
icu_locid = "1.5"                # Locale identifiers
icu_casemap = "1.5"              # Case mapping (Turkish İ, etc.)
icu_segmenter = "1.5"            # Sentence/word segmentation

# UUID generation
uuid = { version = "1.10", features = ["v4", "fast-rng"] }

# Cranelift JIT compiler backend
cranelift-codegen = { version = "0.113", optional = true }
cranelift-frontend = { version = "0.113", optional = true }
cranelift-jit = { version = "0.113", optional = true }
cranelift-module = { version = "0.113", optional = true }
cranelift-native = { version = "0.113", optional = true }

# For runtime support
libc = "0.2"

# LLVM backend for native performance
inkwell = { version = "0.6", features = ["llvm18-1"], optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
proptest = "1.4"

[[bin]]
name = "sigil"
path = "src/main.rs"

[lib]
name = "sigil_parser"
path = "src/lib.rs"
